<resources>
    <string-array name="lists_array">
        <item>Входящие</item>
        <item>Сегодня</item>
        <item>Завтра</item>
        <item>Календарь</item>
        <item>Действия</item>
    </string-array>
    
    <string name="app_name">Knuckle Down</string>
    <string name="menu_app_name">Knuckle \nDown</string>
    <string name="inbox">Входящие</string>
    <string name="menu_today">Сегодня</string>
    <string name="menu_tomorrow">Завтра</string>
    <string name="menu_calendar">Календарь</string>
    <string name="menu_actions">Действия</string>
    <string name="enter_task">Введите задачу</string>
    <string name="task">Задача</string>
    <string name="enter_date">Установить срок</string>
    <string name="default_date">Понедельник, 11.11.2022</string>
    <string name="default_time">12:00</string>
    <string name="done">Выполнено</string>
    <string name="save_task">Сохранить задачу</string>
    <string name="add">Добавить</string>
    <string name="saved">Сохранено</string>
    <string name="list">Список</string>
    <string name="delete_task">Удалить задачу</string>
    <string name="deleted">Удалено</string>
    <string name="pomodoro_timer">Pomodoro-таймер</string>
    <string name="start_timer">Запустите таймер!</string>
    <string name="focus_on_work">Сосредоточьтесь на работе!</string>
    <string name="time_to_rest">Время отдохнуть!</string>
    <string name="timer_range">От 25 до 50 минут</string>
    <string name="default_timer_time">25</string>
    <string name="start_timer_description">Запустить таймер</string>
    <string name="stop_timer_description">Остановить таймер</string>
    <string name="start_break_timer">Запустить таймер для отдыха</string>
    <string name="alert_delete_task">Вы хотите удалить задачу?</string>
    <string name="alert_confirm">Да</string>
    <string name="alert_cancel">Отмена</string>
    <string name="enter_task_name">Введите название задачи!</string>
    <string name="select_date">Выберите дату:</string>
    <string name="select_time">Выберите время:</string>
</resources>