<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfetti_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/timer_range"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timer_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/default_timer_time"
            android:textAlignment="center"
            android:textSize="44sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/todo_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_timer"
        android:textColor="?android:textColorPrimary"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/progress_circular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

    <ProgressBar
        android:id="@+id/progress_circular"
        style="@style/CircularDeterminateProgressBar"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginBottom="56dp"
        android:indeterminateOnly="false"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout"
        tools:progress="85" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/progress_circular"
        app:layout_constraintEnd_toEndOf="@+id/progress_circular"
        app:layout_constraintStart_toStartOf="@+id/progress_circular"
        app:layout_constraintTop_toTopOf="@+id/progress_circular"
        tools:text="25:00" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/start_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_start_24"
        android:contentDescription="@string/start_timer_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_circular"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/break_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"
        android:enabled="false"
        android:src="@drawable/ic_break_24"
        android:contentDescription="@string/start_break_timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_circular"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>